Fixed an issue where the logout link would be hidden in CI on mobile devices.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Responsive.css
@@ -144,6 +144,10 @@
         overflow: auto;
     }
 
+    #Navigation ul.Individual {
+        margin-bottom: 100px;
+    }
+
     #Navigation > ul,
     #Navigation .Individual,
     #Navigation > ul > li,
